--- a/web_flask/templates/9-states.html
+++ b/web_flask/templates/9-states.html
@@ -8,7 +8,7 @@
       <H1>Not found!</H1>
     {% else %}
       {%if id %}
-        <H1>State</H1>
+        <H1>State: {{state.name }}</H1>
         <H3>Cities</H3>
         <UL>
           {% for city in state.cities|sort(attribute="name") %}
